src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Largest_Hard_Credit_Count__c</fullName>
        <description>Number of gifts where this Contact has received Hard Credits.</description>
        <inlineHelpText>Number of gifts where this Contact has received Hard Credits.</inlineHelpText>
        <label>Largest Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Hard_Credit_Date__c</fullName>
        <description>Date largest Hard Credit received on Contact.</description>
        <inlineHelpText>Date largest Hard Credit received on Contact.</inlineHelpText>
        <label>Largest Hard Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Recognition_Credit_Amount__c</fullName>
        <description>Amount of largest Recognition Credit received on Contact.</description>
        <inlineHelpText>Amount of largest Recognition Credit received on Contact.</inlineHelpText>
        <label>Largest Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Recognition_Credit_Date__c</fullName>
        <description>Date largest Recognition Credit received on Contact.</description>
        <inlineHelpText>Date largest Recognition Credit received on Contact.</inlineHelpText>
        <label>Largest Recognition Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Soft_Credit_Amount__c</fullName>
        <description>Amount of largest Soft Credit received on Contact.</description>
        <inlineHelpText>Amount of largest Soft Credit received on Contact.</inlineHelpText>
        <label>Largest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Soft_Credit_Date__c</fullName>
        <description>Date largest Soft Credit received on Contact.</description>
        <inlineHelpText>Date largest Soft Credit received on Contact.</inlineHelpText>
        <label>Largest Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Hard_Credit_Amount__c</fullName>
        <description>Amount of last Hard Credit received on Contact.</description>
        <inlineHelpText>Amount of last Hard Credit received on Contact.</inlineHelpText>
        <label>Last Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Hard_Credit_Date__c</fullName>
        <description>Date last Hard Credit received on Contact.</description>
        <inlineHelpText>Date last Hard Credit received on Contact.</inlineHelpText>
        <label>Last Hard Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Recognition_Credit_Amount__c</fullName>
        <description>Amount of last Recognition Credit received on Contact.</description>
        <inlineHelpText>Amount of last Recognition Credit received on Contact.</inlineHelpText>
        <label>Last Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Recognition_Credit_Date__c</fullName>
        <description>Date last Recognition Credit received on Contact.</description>
        <inlineHelpText>Date last Recognition Credit received on Contact.</inlineHelpText>
        <label>Last Recognition Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Soft_Credit_Amount__c</fullName>
        <description>Amount of last Soft Credit received on Contact.</description>
        <inlineHelpText>Amount of last Soft Credit received on Contact.</inlineHelpText>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Soft_Credit_Date__c</fullName>
        <description>Date last Soft Credit received on Contact.</description>
        <inlineHelpText>Date last Soft Credit received on Contact.</inlineHelpText>
        <label>Last Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Hard_Credit_Amount__c</fullName>
        <description>Total dollar value of Hard Credits this Contact has received.</description>
        <inlineHelpText>Total dollar value of Hard Credits this Contact has received.</inlineHelpText>
        <label>Lifetime Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Hard_Credit_Count__c</fullName>
        <description>Total number of gifts where this Contact has received Hard Credits.</description>
        <inlineHelpText>Total number of gifts where this Contact has received Hard Credits.</inlineHelpText>
        <label>Lifetime Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Recognition_Credit_Amount__c</fullName>
        <description>Total dollar value of Recognition Credits this Contact has received.</description>
        <inlineHelpText>Total dollar value of Recognition Credits this Contact has received.</inlineHelpText>
        <label>Lifetime Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Recognition_Credit_Count__c</fullName>
        <description>Total number of gifts where this Contact has received Recognition Credits.</description>
        <inlineHelpText>Total number of gifts where this Contact has received Recognition Credits.</inlineHelpText>
        <label>Lifetime Recognition Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Soft_Credit_Amount__c</fullName>
        <description>Total dollar value of Soft Credits this Contact has received.</description>
        <inlineHelpText>Total dollar value of Soft Credits this Contact has received.</inlineHelpText>
        <label>Lifetime Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Soft_Credit_Count__c</fullName>
        <description>Total number of gifts where this Contact has received Soft Credits.</description>
        <inlineHelpText>Total number of gifts where this Contact has received Soft Credits.</inlineHelpText>
        <label>Lifetime Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Affiliation__c</fullName>
        <description>Formula retrieves the Contact&apos;s primary Affiliation.</description>
        <formula>Text(Account.rC_Giving__Primary_Affiliation__c)</formula>
        <inlineHelpText>Primary Affiliation for the Contact.</inlineHelpText>
        <label>Primary Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Giving_Level__c</fullName>
        <description>Formula retrieves the Contact&apos;s Primary Giving Level.</description>
        <formula>Account.rC_Giving__Primary_Giving_Level__r.Name</formula>
        <inlineHelpText>Primary Giving Level for the Contact.</inlineHelpText>
        <label>Primary Giving Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Membership_Expiration_Date__c</fullName>
        <description>Formula retrieves the Contact&apos;s Primary Membership Expiration Date.</description>
        <formula>Account.rC_Giving__Primary_Membership_Expiration_Date__c</formula>
        <inlineHelpText>Primary Membership Expiration Date for the Contact.</inlineHelpText>
        <label>Primary Membership Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Membership_Status__c</fullName>
        <description>Formula retrieves the Contact&apos;s Primary Membership Status.</description>
        <formula>Account.rC_Giving__Primary_Membership_Status__c</formula>
        <inlineHelpText>Primary Membership Status for the Contact.</inlineHelpText>
        <label>Primary Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Hard_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Contact where Hard Credits were received during the previous prior calendar year.</description>
        <inlineHelpText>Dollar value of gifts on Contact where Hard Credits were received during the previous calendar year.</inlineHelpText>
        <label>Prior Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Hard_Credit_Count__c</fullName>
        <description>Number of gifts on Contact where Hard Credits were received during the previous calendar year.</description>
        <inlineHelpText>Number of gifts on Contact where Hard Credits were received during the previous calendar year.</inlineHelpText>
        <label>Prior Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Recognition_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Contact where Recognition Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Dollar value of gifts on Contact where Recognition Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Recognition_Credit_Count__c</fullName>
        <description>Number of gifts on Contact where Recognition Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Number of gifts on Contact where Recognition Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Recognition Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Soft_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Contact where Soft Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Dollar value of gifts on Contact where Soft Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Soft_Credit_Count__c</fullName>
        <description>Number of gifts on Contact where Soft Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Number of gifts on Contact where Soft Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Hard_Credits_Status__c</fullName>
        <description>Status of Hard Credit information on Contact. Status of &apos;Ok&apos; means data is up to date.</description>
        <formula>IF(NOT(rC_Giving__Track_Hard_Credits__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Hard_Credits__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of Hard Credit information on Contact. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Hard Credits Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Hard_Credits__c</fullName>
        <description>Populated by trigger, indicates the date and time from the most recently updated Hard Credit record.</description>
        <inlineHelpText>Indicates the date and time from the most recently updated Hard Credit record.</inlineHelpText>
        <label>Rollup Hard Credits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Recognition_Credits_Status__c</fullName>
        <description>Status of Recognition Credit information on Contact. Status of &apos;Ok&apos; means data is up to date.</description>
        <formula>IF(NOT(rC_Giving__Track_Recognition_Credits__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Recognition_Credits__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of Recognition Credit information on Contact. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Recognition Credits Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Recognition_Credits__c</fullName>
        <description>Populated by trigger, indicates the date and time from the most recently updated Recognition Credit record.</description>
        <inlineHelpText>Indicates the date and time from the most recently updated Recognition Credit record.</inlineHelpText>
        <label>Rollup Recognition Credits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Soft_Credits_Status__c</fullName>
        <description>Status of Soft Credit information on Contact. Status of &apos;Ok&apos; means data is up to date.</description>
        <formula>IF(NOT(rC_Giving__Track_Soft_Credits__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Soft_Credits__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of Soft Credit information on Contact. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Soft Credits Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Soft_Credits__c</fullName>
        <description>Populated by trigger, indicates the date and time from the most recently updated Soft Credit record.</description>
        <inlineHelpText>Indicates the date and time from the most recently updated Soft Credit record.</inlineHelpText>
        <label>Rollup Soft Credits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Hard_Credits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Track and display Hard Credit information on Contact.</description>
        <inlineHelpText>Track and display Hard Credit information on Contact.</inlineHelpText>
        <label>Track Hard Credits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Recognition_Credits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Track and display Recognition Credit information on Contact.</description>
        <inlineHelpText>Track and display Recognition Credit information on Contact.</inlineHelpText>
        <label>Track Recognition Credits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Soft_Credits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Track and display Soft Credit information on Contact.</description>
        <inlineHelpText>Track and display Soft Credit information on Contact.</inlineHelpText>
        <label>Track Soft Credits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Capability_Comments__c</fullName>
        <description>Specify the comment on the contacts capabilities.It can be useful before scheduling a contact on a shift/job.</description>
        <inlineHelpText>Specify the comment on the contacts capabilities.It can be useful before scheduling a contact on a shift/job.</inlineHelpText>
        <label>Capability Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Email_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send email notifications when matching project are available.</description>
        <inlineHelpText>Send email notifications when matching project are available.</inlineHelpText>
        <label>Email Notifications?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__FullName__c</fullName>
        <formula>FirstName +&apos; &apos; +  LastName</formula>
        <label>FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Reference_1_Name__c</fullName>
        <description>Provide reference.</description>
        <inlineHelpText>Provide reference.</inlineHelpText>
        <label>Reference 1: Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Reference_2_Name__c</fullName>
        <description>Provide reference.</description>
        <inlineHelpText>Provide reference.</inlineHelpText>
        <label>Reference 2: Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Rollup_Members__c</fullName>
        <label>Rollup Members</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Rollup_TimeLog__c</fullName>
        <label>Rollup TimeLog</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__SMS_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if user does wants to receive sms/text messages related to volunteering.</description>
        <inlineHelpText>Indicates if user does wants to receive sms/text messages related to volunteering.</inlineHelpText>
        <label>SMS Notifications?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Total_Cancelled_Hours__c</fullName>
        <description>Total of all of hours by Time Log status-Cancelled</description>
        <inlineHelpText>Total of all of hours by Time Log status-Cancelled</inlineHelpText>
        <label>Total Cancelled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Total_Completed_Hours__c</fullName>
        <description>Total of all of hours by Time Log status-Completed</description>
        <inlineHelpText>Total of all of hours by Time Log status-Completed</inlineHelpText>
        <label>Total Completed Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Total_No_Show_Hours__c</fullName>
        <description>Total of all of hours by Time Log status-No Show</description>
        <inlineHelpText>Total of all of hours by Time Log status-No Show</inlineHelpText>
        <label>Total No-Show Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Track_Shifts__c</fullName>
        <description>Used internally to store the Shift ID&apos;s on which the contacts is added.</description>
        <inlineHelpText>Used internally to store the Shift ID&apos;s on which the contact is added.</inlineHelpText>
        <label>Track Shifts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Volunteer_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the number of times the Contact has Volunteered.</description>
        <inlineHelpText>Indicates the number of times the Contact has Volunteered.</inlineHelpText>
        <label>Volunteer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Volunteer_Flagged_Reason__c</fullName>
        <description>Provide the reason for Flagging the contact from Volunteering anymore. Related flags will be automatically set, thus contacts will be excluded from matching projects.</description>
        <inlineHelpText>Provide the reason for Flagging the contact from Volunteering anymore.</inlineHelpText>
        <label>Volunteer Flagged Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Volunteer_Flagged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a contact cannot volunteer anymore. This contact will not be included in any matching filters or can schedule himself.</description>
        <inlineHelpText>Indicates the contact is flagged and cannot volunteer anymore.</inlineHelpText>
        <label>Volunteer Flagged/Excluded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Volunteer_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the total number of hours the Contact has Volunteered.</description>
        <inlineHelpText>Indicates the total number of hours the Contact has Volunteered.</inlineHelpText>
        <label>Volunteer Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Volunteer_Karma__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the Karma of a Contact earned by Volunteering.</description>
        <inlineHelpText>Indicates the Karma of a Contact earned by Volunteering.</inlineHelpText>
        <label>Volunteer Karma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Volunteer_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, contact will be understood to be a Volunteer Manager of other volunteers.</description>
        <inlineHelpText>If checked, contact will be understood to be a Volunteer Manager of other volunteers.</inlineHelpText>
        <label>Volunteer Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Volunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto checked, Identifies a Contact as a Volunteer when it has a preference of Record Type &quot;Volunteers&quot;</description>
        <inlineHelpText>Auto checked, Identifies a Contact as a Volunteer when it has a preference of Record Type &quot;Volunteers&quot;</inlineHelpText>
        <label>Volunteer?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>SUID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Degree_String_Long__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deceased_Contacts_Last_30_Days</fullName>
        <columns>FULL_NAME</columns>
        <columns>SUID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>rC_Bios__Deceased_Date__c</columns>
        <columns>Deceased_Status_Change__c</columns>
        <columns>Deceased_Source__c</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Degree_String_Long__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deceased_Status_Change__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Deceased Contacts - Last 30 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>SUID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Degree_String_Long__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>rC_Bios__Household</fullName>
        <active>true</active>
        <description>Individuals belonging to a Household.</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Bios__Organizational</fullName>
        <active>true</active>
        <description>Individuals belonging to an Organization or Foundation</description>
        <label>Organizational</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Deceased_Must_Be_True</fullName>
        <active>true</active>
        <description>Deceased must be True</description>
        <errorConditionFormula>AND(
    ISPICKVAL( Status__c , &apos;Deceased&apos;),
    rC_Bios__Deceased__c = False
    )</errorConditionFormula>
        <errorMessage>Please use the &quot;Confirm Deceased&quot; button to mark the Contact as deceased.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deceased_Source_required_if_Deceased</fullName>
        <active>true</active>
        <description>S-340089</description>
        <errorConditionFormula>rC_Bios__Deceased__c &amp;&amp; ISPICKVAL(Deceased_Source__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Deceased_Source__c</errorDisplayField>
        <errorMessage>You must enter in where you received the source of the deceased information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deceased_Year_must_be_set</fullName>
        <active>true</active>
        <description>I-205995</description>
        <errorConditionFormula>!ISPICKVAL(Deceased_Source__c,&apos;&apos;) &amp;&amp; 
ISPICKVAL(rC_Bios__Deceased_Year__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Deceased_Year__c</errorDisplayField>
        <errorMessage>You must set a year if this person is deceased.  If not known, select Unknown</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Name_is_required</fullName>
        <active>false</active>
        <description>First Name is Required</description>
        <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSB_Email_Required_If_Preferred</fullName>
        <active>false</active>
        <description>This rule states that GSB Email field must have a value if it is set as preferred email.</description>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.GSB_Email_Required_If_Preferred__c,
(AND(ISBLANK(GSB__c), 
ISPICKVAL(rC_Bios__Preferred_Email__c, &apos;GSB&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>GSB__c</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Gender_Salutation_Restrictions</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(rC_Bios__Gender__c,&apos;Male&apos;) &amp;&amp; ((ISPICKVAL(Salutation,&apos;Ms.&apos;) ||
ISPICKVAL(Salutation,&apos;Mrs.&apos;) ||
ISPICKVAL(Salutation,&apos;Mr/s.&apos;) ||
ISPICKVAL(Salutation,&apos;Baroness&apos;) ||
ISPICKVAL(Salutation,&apos;Countess&apos;) ||
ISPICKVAL(Salutation,&apos;Dame&apos;) ||
ISPICKVAL(Salutation,&apos;Frau&apos;) ||
ISPICKVAL(Salutation,&apos;Her Majesty&apos;) ||
ISPICKVAL(Salutation,&apos;Her Royal Highness&apos;) ||
ISPICKVAL(Salutation,&apos;Lady&apos;) ||
ISPICKVAL(Salutation,&apos;Madame&apos;) ||
ISPICKVAL(Salutation,&apos;Mother&apos;) ||
ISPICKVAL(Salutation,&apos;Princess&apos;) ||
ISPICKVAL(Salutation,&apos;Professor Emerita&apos;) ||
ISPICKVAL(Salutation,&apos;Queen&apos;) ||
ISPICKVAL(Salutation,&apos;Senora&apos;) ||
ISPICKVAL(Salutation,&apos;Sister&apos;) ||
ISPICKVAL(Salutation,&apos;The Reverend Mother&apos;))),
(ISPICKVAL(rC_Bios__Gender__c,&apos;Female&apos;) &amp;&amp; (
ISPICKVAL(Salutation,&apos;Mr.&apos;) || 
ISPICKVAL(Salutation,&apos;Mr/s.&apos;) ||
ISPICKVAL(Salutation,&apos;Baron&apos;) ||
ISPICKVAL(Salutation,&apos;Brother&apos;) ||
ISPICKVAL(Salutation,&apos;Count&apos;) ||
ISPICKVAL(Salutation,&apos;Father&apos;) ||
ISPICKVAL(Salutation,&apos;Herr&apos;) ||
ISPICKVAL(Salutation,&apos;His Majesty&apos;) ||
ISPICKVAL(Salutation,&apos;His Royal Highness&apos;) ||
ISPICKVAL(Salutation,&apos;King&apos;) ||
ISPICKVAL(Salutation,&apos;Lord&apos;) ||
ISPICKVAL(Salutation,&apos;Marquis&apos;) ||
ISPICKVAL(Salutation,&apos;Monsieur&apos;) ||
ISPICKVAL(Salutation,&apos;Prince&apos;) ||
ISPICKVAL(Salutation,&apos;Professor Emeritus&apos;) ||
ISPICKVAL(Salutation,&apos;Senor&apos;) ||
ISPICKVAL(Salutation,&apos;Sir&apos;) ||
ISPICKVAL(Salutation,&apos;The Reverend Father&apos;)))
)</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>The salutation selected can not be used with the gender of this Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Gender_is_required</fullName>
        <active>true</active>
        <description>S-340088 - Gender is required</description>
        <errorConditionFormula>AND(ISPICKVAL( rC_Bios__Gender__c,&apos;&apos;), (RecordType.Name == &apos;Household&apos;))</errorConditionFormula>
        <errorDisplayField>rC_Bios__Gender__c</errorDisplayField>
        <errorMessage>You must select a Gender</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Contact_Prefix_then_Prefix_Null</fullName>
        <active>true</active>
        <description>S-366408</description>
        <errorConditionFormula>!ISPICKVAL(Salutation,&apos;&apos;) &amp;&amp; No_Prefix__c=TRUE</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>Prefix can not be set when No Prefix checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAA_Email_Required_If_Preferred</fullName>
        <active>true</active>
        <description>This rule states that SSA Email field must have a value if it is set as preferred email.</description>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.SAA_Email_Required_If_Preferred__c,
(AND(ISBLANK(SAA__c), ISPICKVAL(rC_Bios__Preferred_Email__c, &apos;SAA&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>SAA__c</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Must_be_set</fullName>
        <active>false</active>
        <description>S-340088 - Stage must have a value</description>
        <errorConditionFormula>AND(ISPICKVAL(rC_Education__Stage__c,&apos;&apos;),
   (RecordType.Name == &apos;Household&apos;))</errorConditionFormula>
        <errorDisplayField>rC_Education__Stage__c</errorDisplayField>
        <errorMessage>Stage must have a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Account_Is_Required</fullName>
        <active>true</active>
        <description>This rule states that the Contact must have an Account.</description>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Account_Is_Required__c,ISBLANK(AccountId),False)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Assistant_Email_Not_Preferred_Opt_Out</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Assistant_Email_Required_If_Preferred</fullName>
        <active>true</active>
        <description>This rule states that Assistant Email field must have a value if it is set as preferred email.</description>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Assistant_Email_Required_If_Preferred__c,
(AND(ISBLANK(rC_Bios__Assistant_Email__c), 
ISPICKVAL(rC_Bios__Preferred_Email__c, &apos;Assistant&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Assistant_Email__c</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Assistant_Phone_Not_Preferred_DNC</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
</CustomObject>